--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -8,4 +8,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\QSoft.WPF.TreeListView\QSoft.WPF.TreeListView.csproj" />
+  </ItemGroup>
+
 </Project>
