--- a/QSoft.WPF.ValueConvert/QSoft.WPF.ValueConvert.csproj
+++ b/QSoft.WPF.ValueConvert/QSoft.WPF.ValueConvert.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net8.0-windows;net6.0-windows</TargetFrameworks>
+    <TargetFrameworks>net8.0-windows;net6.0-windows;net472</TargetFrameworks>
     <LangVersion>12.0</LangVersion>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
