--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\QSoft.WPF.Behaviors\QSoft.WPF.Behaviors.csproj" />
     <ProjectReference Include="..\QSoft.WPF.TreeListView\QSoft.WPF.TreeListView.csproj" />
   </ItemGroup>
 
