--- a/WpfApp_MVVM/WpfApp_MVVM.csproj
+++ b/WpfApp_MVVM/WpfApp_MVVM.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\QSoft.WPF.Behaviors\QSoft.WPF.Behaviors.csproj" />
+  </ItemGroup>
+
 </Project>
