--- a/WpfAppNET472/WpfAppNET472.csproj
+++ b/WpfAppNET472/WpfAppNET472.csproj
@@ -95,10 +95,19 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\QSoft.WPF.Controls.ComboButton\QSoft.WPF.Controls.ComboButton.csproj">
+      <Project>{d8d6e6b0-039d-4605-859d-8f37789ec7a8}</Project>
+      <Name>QSoft.WPF.Controls.ComboButton</Name>
+    </ProjectReference>
     <ProjectReference Include="..\QSoft.WPF.ValueConvert\QSoft.WPF.ValueConvert.csproj">
       <Project>{a8bcac54-7caa-45ab-9aa6-9c0a8eb54803}</Project>
       <Name>QSoft.WPF.ValueConvert</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="1.jpg" />
+    <Resource Include="2.jpg" />
+    <Resource Include="3.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
