--- a/WpfApp_ContentControl/WpfApp_ContentControl.csproj
+++ b/WpfApp_ContentControl/WpfApp_ContentControl.csproj
@@ -1,15 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
-    <LangVersion>12.0</LangVersion>
     <Nullable>enable</Nullable>
-    <UseWPF>true</UseWPF>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
+    <ProjectReference Include="..\QSoft.WPF.ContentControlView\QSoft.WPF.ContentControlView.csproj" />
   </ItemGroup>
 
 </Project>
