--- a/Wpf_WebView2/reactjst/package.json
+++ b/Wpf_WebView2/reactjst/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-native-webview": "^13.12.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/chrome": "^0.0.289",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
