--- a/QSoft.WPF.PanelT/QSoft.WPF.PanelT.csproj
+++ b/QSoft.WPF.PanelT/QSoft.WPF.PanelT.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
+    <ProjectReference Include="..\QSoft.WPF.Panel\QSoft.WPF.Panel.csproj" />
   </ItemGroup>
 
 </Project>
