--- a/QSoft.WPF.Panel/QSoft.WPF.Panel.csproj
+++ b/QSoft.WPF.Panel/QSoft.WPF.Panel.csproj
@@ -6,12 +6,14 @@
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
-    <Title>Panel.NET</Title>
+    <Title>WPF.Panel.NET</Title>
     <Copyright>Copyright © Ben Hsu 2025</Copyright>
     <PackageProjectUrl>https://github.com/oven425/QSoft.WPF/tree/master/QSoft.WPF.Panel</PackageProjectUrl>
     <RepositoryUrl>https://github.com/oven425/QSoft.WPF.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>Flex</PackageTags>
+    <Description>custom panel of WPF
+FlexPanel like css flex</Description>
   </PropertyGroup>
 
 </Project>
