--- a/WpfApp_FlexPanelT/WpfApp_FlexPanelT.csproj
+++ b/WpfApp_FlexPanelT/WpfApp_FlexPanelT.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\QSoft.WPF.PanelT\QSoft.WPF.PanelT.csproj" />
+    <ProjectReference Include="..\QSoft.WPF.Panel\QSoft.WPF.Panel.csproj" />
   </ItemGroup>
 
 </Project>
