--- a/QSoft.WPF.Panel/QSoft.WPF.Panel.csproj
+++ b/QSoft.WPF.Panel/QSoft.WPF.Panel.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <VersionPrefix>1.0.0.4</VersionPrefix>
-    <TargetFrameworks>net472;net6.0-windows;net8.0-windows</TargetFrameworks>
+    <TargetFrameworks>net472;net6.0-windows;net8.0-windows;net10.0-windows</TargetFrameworks>
     <LangVersion>13.0</LangVersion>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
